unity (4.2.0-0ubuntu2) UNRELEASED; urgency=low

  * Upstream fixes:
    - don't leak in the indicator code (lp: #806485)

 -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 08 Jul 2011 15:24:57 +0200

unity (4.2.0-0ubuntu1) oneiric; urgency=low

  * New upstream release.
  * debian/control:
    - breaks against older compiz (those not doing gtk_init)
  * debian/rules:
    - ship the unitydialogs plugin (not networkarearegion as it seems to do
      weird artefacts)
    - bump libunity-core-4.0-4 shlib

 -- Didier Roche <didrocks@ubuntu.com>  Mon, 04 Jul 2011 19:18:31 +0200

unity (4.0.1-0ubuntu3) oneiric; urgency=low

  * Backport Neil's commit to migrate the indicator loaders to GTK3
  * CMakeLists.txt: build without Werror to workaround a build issue

 -- Sebastien Bacher <seb128@ubuntu.com>  Thu, 30 Jun 2011 15:52:19 +0100

unity (4.0.1-0ubuntu2) oneiric; urgency=low

  * Move back the .desktop file in unity from unity-common to avoid a lintian
    warning
  * do the same for the man page moved to unity and unity-services
    (and add Replaces: then)
  * Move from libunity-core-4.0-1 to libunity-core-4.0-4 for last soname change
  * Fix a typo in debian/changelog
  * make -dev arch:any to be binuable if needed

 -- Didier Roche <didrocks@ubuntu.com>  Thu, 23 Jun 2011 10:56:11 +0200

unity (4.0.1-0ubuntu1) oneiric; urgency=low

  * New upstream release.
    - Launcher - move Launcher icon count indicator so that it appears on the
      right side of the Launcher icons (LP: #767046)
  * Cherry pick some patches to not build on GTest, soname fixes as well as
    invalid value for automaximize
  * Some lintian cleanage:
    debian/control:
    - bump Standards-Version
    - don't build-dep on quilt
    debian/rules, debian/patches:
    - dont use --with-quilt
  * debian/control:
    - add build-dep on libgtk-3-dev, libcairo2-dev, libindicator3-dev,
      libsigc++-2.0-dev
    - bump deps on libunity-misc-dev, libnux-1.0-dev, libbamf3-dev
    - remove vala