@@ -20,10 +20,9 @@ Build-Depends: cmake,
                libgtk-3-dev,
                libcairo2-dev,
                libpango1.0-dev,
-               libgnomeui-dev,
                libdee-dev (>= 0.5.4),
-               libindicator-dev (>= 0.3.19),
-               libindicator3-dev (>= 0.3.22),
+               libindicator-dev (>= 0.3.90),
+               libindicator3-dev (>= 0.3.90),
                libunity-misc-dev (>= 4.0.2),
                libutouch-grail-dev (>= 1.0.20),
                libxcb-icccm1-dev,
