@@ -2,6 +2,10 @@ unity (4.2.0-0ubuntu2) UNRELEASED; urgency=low
 
   * Upstream fixes:
     - don't leak in the indicator code (lp: #806485)
+    - use the new libindicator
+  * debian/control:
+    - drop libgnomeui-dev build-depends, it doesn't seem required
+    - updated libindicator requirement
 
  -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 08 Jul 2011 15:24:57 +0200
 
